--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> 
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="empty.css"> 
     <title>Snakes</title>
 </head>
 <body>
-    <h1>Snakes</h1>
+    <h1>You know what they say, keep your friends close, and your emenies closer. You know your enemy is a snake, but what about your friends? </h1>
+    <h2>-They</h2>
     <canvas id="map"></canvas>
-
+    <div id="btn">
+        <button onclick="document.location='empty.html'">Click here to find out who the snakes are</button>
+    </div>
 </body>
 </html>
