made theme more.. snake

--- a/empty.html
+++ b/empty.html
@@ -9,7 +9,7 @@
     <title>Snakes</title>
 </head>
 <body>
-    <h1>Snakes</h1>
+    <h1>Snake</h1>
     <canvas id="map"></canvas>
     <div>
         <button id="restartButton">Reset</button>
