--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <title>Snakes</title>
 </head>
 <body>
-    <h1>You know what they say, keep your friends close, and your emenies closer. You know your enemy is a snake, but what about your friends? </h1>
-    <h2>-They</h2>
+    <h1>I'll venmo you $1 if you get 100</h1>
     <canvas id="map"></canvas>
     <div id="btn">
-        <button onclick="document.location='empty.html'">Click here to find out who the snakes are</button>
+        <button onclick="document.location='empty.html'">Start Game</button>
     </div>
 </body>
 </html>
