Introduction screenshot added to README

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Snakes</title>
 </head>
 <body>
-    <h1>I'll venmo you $1 if you get 100</h1>
+    <h1>Snake, but no ladder</h1>
     <canvas id="map"></canvas>
     <div id="btn">
         <button onclick="document.location='empty.html'">Start Game</button>
