Added body into css with font style, text aligned in the center, and changed background color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Snakes</title>
 </head>
 <body>
-    <h1>Snake, but no ladder</h1>
+    <h1>Snake but no ladder</h1>
     <canvas id="map"></canvas>
     <div id="btn">
         <button onclick="document.location='empty.html'">Start Game</button>
